# RTSP-Analyser

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE-THIRD-PARTY.md  Readme.md  build.sh  build_arm.sh  build_release.sh  build_tsan.sh  build_x64.sh  exec.sh  exec_debug.sh  exec_debug_asan.sh  exec_debug_tsan.sh  exec_release.sh  rtsp_config.json.exemple  todo.md  toolchain-aarch64.cmake  vcpkg-configuration.json  vcpkg.json  vcpkg_clear_cache.sh  x64-linux-cascadelake.cmake
RtspAnalyser/: CMakeLists.txt
RtspAnalyser.Analyser/: CMakeLists.txt
RtspAnalyser.Analyser/includes/DelNico/RtspAnalyser/Analyser/: HumanDetector.h  IAnalyser.h  Multiplexer.h  OutputStream.h  Streamer.h  TriggerWorker.h  Viewer.h
RtspAnalyser.Analyser/includes/Nico/RtspAnalyser/Analyser/: HumanDetector.h  IAnalyser.h  MotionDetector.h  Multiplexer.h  OutputStream.h  TfHumanDetector.h  Viewer.h
RtspAnalyser.Analyser/src/: HumanDetector.cpp  IAnalyser.cpp  MotionDetector.cpp  Multiplexer.cpp  OutputStream.cpp  Streamer.cpp  TfHumanDetector.cpp  TriggerWorker.cpp  Viewer.cpp
RtspAnalyser.Libs/: CMakeLists.txt
RtspAnalyser.Libs/includes/DelNico/RtspAnalyser/Libs/: Codec.h.old  ConditionalVariable.h  Config.h  Logger.h  Spinlock.h  Stream.h
RtspAnalyser.Libs/includes/Nico/RtspAnalyser/Libs/: Codec.h  ConditionalVariable.h  Config.h  Logger.h  Spinlock.h  Stream.h
RtspAnalyser.Libs/src/: ConditionalVariable.cpp  Config.cpp  Logger.cpp  Spinlock.cpp
RtspAnalyser.Management/: CMakeLists.txt
RtspAnalyser.Management/includes/DelNico/RtspAnalyser/Management/: StreamManager.h
RtspAnalyser.Management/src/: StreamManager.cpp
RtspAnalyser.Motion/: CMakeLists.txt
RtspAnalyser.Motion/includes/DelNico/RtspAnalyser/Motion/: MotionDetector.h  MotionEvent.h  MotionManager.h  MotionManagerCaller.h  MotionManagerCalling.h
RtspAnalyser.Motion/includes/Nico/RtspAnalyser/Motion/: MotionDetector.h  MotionEvent.h  MotionManager.h
RtspAnalyser.Motion/src/: MotionDetector.cpp  MotionEvent.cpp  MotionManager.cpp  MotionManagerCalling.cpp
RtspAnalyser.Receivers/: CMakeLists.txt
RtspAnalyser.Receivers/includes/DelNico/RtspAnalyser/Receivers/: StreamReceiver.h
RtspAnalyser.Receivers/src/: StreamReceiver.cpp
RtspAnalyser.Streamer/: CMakeLists.txt
RtspAnalyser.Streamer/includes/Nico/RtspAnalyser/Streamer/: Streamer.h
RtspAnalyser.Streamer/src/: Streamer.cpp
RtspAnalyser.Streamers/: CMakeLists.txt
RtspAnalyser.Streamers/includes/DelNico/RtspAnalyser/Streamers/: StreamReceiver.h  Streamer.h
RtspAnalyser.Streamers/includes/Nico/RtspAnalyser/Streamers/: Streamer.h
RtspAnalyser.Streamers/src/: StreamReceiver.cpp  Streamer.cpp
RtspAnalyser.WatchdogLib/: CMakeLists.txt
RtspAnalyser.WatchdogLib/includes/DelNico/RtspAnalyser/Watchdog/: Watchdog.h
RtspAnalyser.WatchdogLib/includes/DelNico/RtspAnalyser/WatchdogLib/: Watchdog.h
RtspAnalyser.WatchdogLib/includes/Nico/RtspAnalyser/WatchdogLib/: Watchdog.h
RtspAnalyser.WatchdogLib/src/: Watchdog.cpp
RtspAnalyser/includes/DelNico/RtspAnalyser/: RtspAnalyser.h  StreamAnalyserHandler.h
RtspAnalyser/includes/Nico/RtspAnalyser/: RtspAnalyser.h
RtspAnalyser/src/: StreamAnalyserHandler.cpp  main.cpp
dev_container/: Dockerfile  docker-compose.yml  readme.md
doc/: environment.md  environment.old.md
doc/uml/src/: workflow.plantuml
iamodel/: export_yolo26n.py  requirements.txt
vcpkg-overlays/libffi/: portfile.cmake
vcpkg-overlays/vcpkg-make/: vcpkg_make_configure.cmake  vcpkg_make_install.cmake
